# forge-cli

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  NOTICE  PROVIDER_SYSTEM_REVIEW.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_LICENSES.md  build-docker-image.sh  details.md  install-fluid-cli.sh  provider-abstraction-plan.md  pyproject.toml  pytest.ini  requirements.txt  setup.bat  setup.ps1  setup.sh
.github/: CODEOWNERS  dependabot.yml  labeler.yml  labels.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  provider_request.yml
.github/PULL_REQUEST_TEMPLATE/: docs-only.md  provider.md
.github/workflows/: build-profiles.yml  ci.yml  docs-reminder.yml  labeler.yml  release.yml  stale.yml  sync-labels.yml  welcome.yml
docs/: CREATING_PROVIDERS.md  DATA_MESH_MANAGER_PUBLISHING.md  HOW_IT_WORKS.md  OPEN_SOURCE_CHECKLIST.md  OPEN_SOURCE_READINESS.md  TRELLO_STATUS.md  index.html
docs/snowflake/: account-identifiers.md
examples/: generate_example_dags.py  market-config.yaml
examples/0.7.1/: README.md  ai-restricted-data.yaml  backward-compatible.yaml  eu-customer-data-gdpr.yaml  provider-actions-workflow.yaml
examples/01-hello-world/: contract.fluid.yaml
examples/02-csv-to-data-product/: contract.fluid.yaml  customers.csv
examples/03-multi-source-join/: contract.fluid.yaml  customers.csv  orders.csv
examples/04-external-sql-files/: contract.fluid.yaml  customers.csv  transactions.csv
examples/05-data-quality-validation/: contract.fluid.yaml  sales_data.csv
examples/06-time-windows/: contract.fluid.yaml  daily_sales.csv
examples/aws-glue-data-lake/: README.md  contract-crawler.fluid.yaml  contract-database.fluid.yaml  contract-etl-job.fluid.yaml  contract-iceberg.fluid.yaml
examples/bitcoin-price-api-declarative-part-a/: contract.fluid.yaml
examples/bitcoin-price-api-declarative-part-b/: HOW_IT_WORKS.md  README.md  WALKTHROUGH_OBSERVABILITY_NOTES.md  check_data.py  check_schema.py  contract.fluid.yaml  contract.fluid.yaml.full  execute_builds.py  load_and_query.py  temp_data.json  verification-report.json
examples/bitcoin-price-api-declarative-part-c/: README.md  check_features.py  check_policy_tags.py  contract.fluid.yaml  query_data.py  verify_policy_features.py
examples/bitcoin-price-api-imperative-part-a/: .gcloudignore  DEPLOYMENT-SUMMARY.md  PART1_COMPLETION.md  README-GCP.md  README.md  README_IMPERATIVE.md  analyze_prices.py  contract-bigquery.fluid.yaml  contract.fluid.yaml  deploy.ps1  deploy.sh  ingest_bitcoin_prices.py  ingest_bitcoin_prices_bigquery.py  main.py  query_bigquery.py  requirements-gcp.txt  requirements.txt  setup_bigquery.py
examples/contracts/: financial_analytics.json
examples/customer360/: baseline.schema.json  contract.fluid.yaml
examples/generated_dags/: financial_analytics_dag.py  financial_analytics_flow.py  financial_analytics_pipeline.py
examples/policy-examples/: contract-with-violations.yaml  customer-profiles-contract.yaml
fluid_build/: PYPI_PUBLISHING_STRATEGY.md  __init__.py  __main__.py  auth.py  build-manifest.yaml  config.py  config_manager.py  contract_tests.py  errors.py  features.yaml  loader.py  logging_utils.py  publish-to-pypi.sh  schema.py  schema_manager.py  secrets.py  structured_logging.py  validation.py
fluid_build/blueprints/: __init__.py  base.py  registry.py  validators.py
fluid_build/cli/: ENHANCEMENTS.md  README_CLI.md  __init__.py  __main__.py  _command_center.py  _common.py  _io.py  _logging.py  apply.py  auth.py  blueprint.py  bootstrap.py  config.py  console.py  context.py  contract_tests.py  contract_validation.py  copilot.py  core.py  datamesh_manager.py  diff.py  docs_build.py  doctor.py  execute.py  export.py  export_opds.py  forge.py  forge_agents.py  forge_copilot_agent.py  forge_copilot_contract_helpers.py  forge_copilot_discovery.py  forge_copilot_interview.py  forge_copilot_llm_providers.py  forge_copilot_memory.py  forge_copilot_runtime.py  forge_copilot_schema_inference.py  forge_copilot_taxonomy.py  forge_dialogs.py  forge_validation.py  generate_airflow.py  (+39 more)
fluid_build/credentials/: __init__.py  adapters.py  dotenv_store.py  encrypted_store.py  keyring_store.py  resolver.py
fluid_build/forge/: QUICKSTART.md  README.md  __init__.py  registration.py  simple_forge.py  simple_registration.py
fluid_build/observability/: __init__.py  config.py  git.py  reporter.py  secret_redactor.py
fluid_build/policy/: agent_policy.py  compiler.py  guardrails.py  schema_engine.py  sovereignty.py
fluid_build/provider/: __init__.py
scripts/: CCLI_VALIDATION.md  README.md  README_COMPREHENSIVE.md  README_TESTING.md  add_license_headers.py  assess_provider.py  check_features.py  check_license_headers.py  docs_reminder.js  generate_build_report.py  generate_test_report.py  jenkins-cli-commands.sh  jenkins-code-quality.sh  jenkins-framework-tests.sh  jenkins-integration-tests.sh  jenkins-runtime-tests.sh  jenkins-test-summary.sh  update_feature_metrics.py  update_templates_057.py
tests/: .gitignore  CLI_TESTING_IMPROVEMENTS.md  QUICK_REFERENCE.md  README.md  __init__.py  conftest.py  jenkins_runner.py  migrate_legacy.py  run_tests.py  test_agent_policy.py  test_airflow_actions.py  test_airflow_extended.py  test_apply.py  test_apply_branches.py  test_apply_ext.py  test_apply_reports.py  test_auth.py  test_auth_branches.py  test_auth_data.py  test_auth_ext.py  test_auth_ext2.py  test_aws_agent_policy.py  test_aws_airflow_codegen.py  test_aws_ddl.py  test_aws_orchestration_planner.py  test_aws_provider.py  test_blueprint_branches.py  test_blueprint_validators.py  test_bootstrap_ext.py  test_bq_modeler.py  test_circuit_breaker.py  test_cli_bootstrap.py  test_cli_config.py  test_cli_core.py  test_cli_doctor.py  test_cli_doctor_ext.py  test_cli_init_ext.py  test_cli_plan.py  test_cli_test_branches.py  test_cli_test_ext.py  (+154 more)
tools/: README_PHASE1.md
(+407 files in other folders)
